--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -227,9 +227,7 @@
                     </form>
                     </div>
                     <div>
-                      <button class="btn btn-transparent" {{action changeInstances service on="click"}}>
-                        <i class="icon-arrow-right"></i>
-                      </button>
+                      <button class="btn btn-blank btn-set" disabled="true" {{action changeInstances service on="click"}}>SET</button>
                     </div>
                   </div>
                 </td>
@@ -265,7 +263,7 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="UserserviceStatus">
-  {{#if model}}
+{{#if model}}
     <div id="info">
       <div class="info-box">
         <div class="flow-state">
@@ -313,9 +311,7 @@
                     </form>
                   </div>
                   <div>
-                    <button class="btn btn-transparent" {{action runnableChangeInstances model runnable on="click"}}>
-                      <i class="icon-arrow-right"></i>
-                    </button>
+                    <button class="btn btn-blank btn-set" disabled="true" {{action runnableChangeInstances model runnable on="click"}}>SET</button>
                   </div>
                 </div>
               </td>
@@ -330,9 +326,9 @@
       </div>
     </div>
 
-    {{outlet config}}
+  {{outlet config}}
 
-  {{/if}}
+{{/if}}
   </script>
 
   <script type="text/x-handlebars" data-template-name="Userservice">
@@ -438,7 +434,7 @@
         <div class="dataexplore-hivetable-title"> Hive Tables </div>
         <div class="dataexplore-information-title"> Information {{selectedDataset.name}} </div>
       </div>
-      <div id="query-display">
+      <div id="query-display">        
         <div id="query-tables">
           <table class="table">
             {{#each datasets}}
@@ -1297,9 +1293,7 @@
             <div style="display: inline-block; width: 50%">
               <button style="border:0;" disabled="disabled" class="btn btn-blank">Instances Requested: </button>
               {{input keyUp=keyPressed action="changeInstances" id="instancesInput" maxlength="3" class="btn btn-blank" placeholder=model.instances value=instancesInput}}
-              <button class="btn btn-transparent" {{action "changeInstances" on="click"}}>
-                <i class="icon-arrow-right"></i>
-              </button>
+              <button class="btn btn-blank btn-set" disabled="true" {{action "changeInstances" on="click"}}>SET</button>
             </div>
           </div>
           <br />
@@ -1560,14 +1554,12 @@
       <div class="panel">
       <div class="panel-head">
         <div class="panel-title">Make a Request
-          <div class="btn-group" style="float: right">
+          <div class="btn-group" style="float: right;">
             <div>
               <button style="border:0;padding-right:120px;" disabled="disabled" class="btn btn-blank">Instances Provisioned: {{actualInstances}}</button>
               <button style="border:0;" disabled="disabled" class="btn btn-blank">Instances Requested: </button>
               {{input keyUp=keyPressed action="changeInstances" id="instancesInput" maxlength="3" class="btn btn-blank" placeholder=model.instances value=instancesInput}}
-              <button class="btn btn-transparent" {{action "changeInstances" on="click"}}>
-                <i class="icon-arrow-right"></i>
-              </button>
+              <button class="btn btn-blank btn-set" style="margin-right: 6px;" disabled="true" {{action "changeInstances" on="click"}}>SET</button>
             </div>
           </div>
         </div>
