--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -270,37 +270,47 @@
             <strong>{{model.name}}</strong>
         </div>
       </div>
-      <div class="info-box" style="float: right; border: 0;">
-        <div id="action-buttons" class="btn-group pull-right">
-          <button class="btn btn-blank btn-icon" {{action "config"}}><span class="btn-config"></span></button>
-          <div class="start-stop-wrapper">
-            <button class="btn btn-blank start-stop" {{bindAttr disabled="model.startStopDisabled"}} style="width:64px;" {{action "exec" on="click"}}><span {{bindAttr class="model.actionIcon"}}></span><span>{{model.defaultAction}}</span></button>
-          </div>
-        </div>
-        <div class="flow-state"><strong>{{model.currentState}}</strong></div>
-      </div>
-    </div>
+      <div class="info-box" style=" border: 0;">
+            {{!--
+                <div class="instance-wrapper">
+                  <div>
+                    <form {{action "runnableChangeInstances" model model.handler on="submit"}}>
+                      {{input keyUp=keyPressed placeholder=model.handler.requested maxlength="3" value=model.handler.instancesInput class="services-instances-input" }}
+                    </form>
+                  </div>
+                  <div>
+                    <button class="btn btn-blank btn-set" disabled="true" {{action runnableChangeInstances model model.handler on="click"}}>SET</button>
+                  </div>
+                </div>
+                <td class="instance-provisioned service-col">
+                  <div class="instance-num auto-margin"><span>{{model.handler.provisioned}}</span></div>
+                </td>
 
-    <div id="panels">
-      <h2>Handler</h2>
-      <br />
-      <div class="panel">
-        <table class="table">
+      --}}
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="panels">
+
+        <table class="table panels">
           <thead>
-            <tr>
-              <th style="padding-left: 14px; min-width: 200px" class="service-col">Name</th>
-              <th style="min-width: 200px;" class="center-align">Instances Requested</th>
-              <th style="min-width: 200px;" class="center-align">Instances Active</th>
-            </tr>
+          <tr>
+            <th style="min-width: 100px;" class="center-align">Instances Requested</th>
+            <th style="min-width: 100px;" class="center-align">Instances Active</th>
+          </tr>
           </thead>
           <tbody>
+
             <tr>
-              <td class="app-list-name service-col"><a class="none-text-decoration">
-                {{model.handler.id}}
-                </a>
-                <br />
-                <span class="app-list-status pull-left">description here?</span>
-              </td>
               <td style="max-width: 200px;" class="instance-col">
                 <div class="instance-wrapper">
                   <div>
@@ -321,6 +331,22 @@
         </table>
       </div>
 
+
+
+
+      </div>
+      <div class="info-box" style="float: right; border: 0;">
+        <div id="action-buttons" class="btn-group pull-right">
+          <button class="btn btn-blank btn-icon" {{action "config"}}><span class="btn-config"></span></button>
+          <div class="start-stop-wrapper">
+            <button class="btn btn-blank start-stop" {{bindAttr disabled="model.startStopDisabled"}} style="width:64px;" {{action "exec" on="click"}}><span {{bindAttr class="model.actionIcon"}}></span><span>{{model.defaultAction}}</span></button>
+          </div>
+        </div>
+        <div class="flow-state"><strong>{{model.currentState}}</strong></div>
+      </div>
+    </div>
+
+    <div id="panels">
 
 
 
