--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -1129,6 +1129,24 @@
     </div>
   </script>
 
+  <script type="text/x-handlebars" data-template-name="Spark">
+
+    <div id="title">
+      {{view C.Embed.TimeSelector}}
+      <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
+        <li>{{#linkTo Spark.Log model}}Log{{/linkTo}}</li>
+      </ul>
+      <h1>
+        <span>Spark</span>
+        <span class="breadcrumb-app-name"><a {{bindAttr href="model.appHref"}}>{{model.app}}</a> : {{model.name}}
+        </span>
+      </h1>
+    </div>
+
+    {{outlet}}
+
+  </script>
+
   <script type="text/x-handlebars" data-template-name="Flow">
 
     <div id="title">
