--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -48,11 +48,6 @@
       <span class="warning-text">Experiencing connection issues.</span>
     </div>
   </div>
-  <div class="loading-icon hide">
-      <div class="overlay-background">
-          <img src="/assets/img/loading_new.gif" />
-      </div>
-  </div>
   <script type="text/x-handlebars" data-template-name="application">
     <div id="header">
       <div class="left-float">
@@ -128,7 +123,13 @@
         {{view C.Embed.Breadcrumb}}
         <div style="clear:both"></div>
       </div> --}}
-
+      {{#if C.showLoadingIcon}}
+      <div class="loading-icon">
+          <div class="overlay-background">
+              <img src="/assets/img/loading_new.gif" />
+          </div>
+      </div>
+      {{/if}}
       {{outlet}}
 
     </div>
@@ -447,7 +448,6 @@
                   title=""
                   trigger="hover"
                   {{bindAttr data-original-title=tablename}}>
-                    <!-- <a class="none-text-decoration">{{tablename}}</a> -->
                     {{#if from_dataset}}
                       <div class="dataset-icon"> </div>
                     {{ else }}
