Cleanup and alignment. Also handling case of zero workers.

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -263,49 +263,23 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="UserserviceStatus">
-{{#if model}}
+  {{#if model}}
     <div id="info">
       <div class="info-box">
         <div class="flow-state">
             <strong>{{model.name}}</strong>
         </div>
       </div>
-      <div class="info-box" style=" border: 0;">
-            {{!--
-                <div class="instance-wrapper">
-                  <div>
-                    <form {{action "runnableChangeInstances" model model.handler on="submit"}}>
-                      {{input keyUp=keyPressed placeholder=model.handler.requested maxlength="3" value=model.handler.instancesInput class="services-instances-input" }}
-                    </form>
-                  </div>
-                  <div>
-                    <button class="btn btn-blank btn-set" disabled="true" {{action runnableChangeInstances model model.handler on="click"}}>SET</button>
-                  </div>
-                </div>
-                <td class="instance-provisioned service-col">
-                  <div class="instance-num auto-margin"><span>{{model.handler.provisioned}}</span></div>
-                </td>
-
-      --}}
-
-
-
-
-
-
-
-
-
-
-
-
-      <div class="panels">
-
-        <table class="table panels">
+      <div class="info-box">
+      <div class="handlerinstances">
+        <table class="table">
+          <thead>
+          <tr><th colspan=2 style="min-width: 200px; text-align: center;">Handler Instances</th></tr>
+          </thead>
           <thead>
           <tr>
-            <th style="min-width: 100px;" class="center-align">Instances Requested</th>
-            <th style="min-width: 100px;" class="center-align">Instances Active</th>
+            <th style="min-width: 100px;" class="center-align">Requested</th>
+            <th style="min-width: 100px;" class="center-align">Active</th>
           </tr>
           </thead>
           <tbody>
@@ -331,9 +305,6 @@
         </table>
       </div>
 
-
-
-
       </div>
       <div class="info-box" style="float: right; border: 0;">
         <div id="action-buttons" class="btn-group pull-right">
@@ -347,59 +318,61 @@
     </div>
 
     <div id="panels">
-
-
-
       <h2>Service Workers</h2>
       <br />
-
-
-
       <div class="panel">
-        <table class="table">
-          <thead>
-            <tr>
-              <th style="padding-left: 14px; min-width: 200px" class="service-col">Name</th>
-              <th style="min-width: 200px;" class="center-align">Instances Requested</th>
-              <th style="min-width: 200px;" class="center-align">Instances Active</th>
-            </tr>
-          </thead>
-          <tbody>
-            {{!--  RUNNABLES ROWS --}}
-            {{#each runnable in model.workersList}}
-            <tr>
-              <td class="app-list-name service-col"><a class="none-text-decoration">
-                {{runnable.id}}
-                </a>
-                <br />
-                <span class="app-list-status pull-left">description here?</span>
-              </td>
-              <td style="max-width: 200px;" class="instance-col">
-                <div class="instance-wrapper">
-                  <div>
-                    <form {{action "runnableChangeInstances" model runnable on="submit"}}>
-                      {{input keyUp=keyPressed placeholder=runnable.requested maxlength="3" value=runnable.instancesInput class="services-instances-input" }}
-                    </form>
-                  </div>
-                  <div>
-                    <button class="btn btn-blank btn-set" disabled="true" {{action runnableChangeInstances model runnable on="click"}}>SET</button>
-                  </div>
-                </div>
-              </td>
-              <td class="instance-provisioned service-col">
-                  <div class="instance-num auto-margin"><span>{{runnable.provisioned}}</span></div>
-              </td>
-            </tr>
-            {{/each}}
-            {{!--  RUNNABLES ROWS --}}
-          </tbody>
-        </table>
+        {{#if model.workersList}}
+          <table class="table">
+            <thead>
+              <tr>
+                <th style="padding-left: 14px; min-width: 200px" class="service-col">Name</th>
+                <th style="min-width: 200px;" class="center-align">Instances Requested</th>
+                <th style="min-width: 200px;" class="center-align">Instances Active</th>
+              </tr>
+            </thead>
+            <tbody>
+              {{#each runnable in model.workersList}}
+                <tr>
+                  <td class="app-list-name service-col"><a class="none-text-decoration">
+                    {{runnable.id}}
+                    </a>
+                    <br />
+                    {{!-- <span class="app-list-status pull-left"></span> --}}
+                  </td>
+                  <td style="max-width: 200px;" class="instance-col center-align">
+                    <div class="instance-wrapper">
+                      <div>
+                        <form {{action "runnableChangeInstances" model runnable on="submit"}}>
+                          {{input keyUp=keyPressed placeholder=runnable.requested maxlength="3" value=runnable.instancesInput class="services-instances-input" }}
+                        </form>
+                      </div>
+                      <div>
+                        <button class="btn btn-blank btn-set" disabled="true" {{action runnableChangeInstances model runnable on="click"}}>SET</button>
+                      </div>
+                    </div>
+                  </td>
+                  <td class="instance-provisioned service-col center-align">
+                      <div class="instance-num auto-margin"><span>{{runnable.provisioned}}</span></div>
+                  </td>
+                </tr>
+              {{/each}}
+            </tbody>
+          </table>
+        {{ else }}
+          <div class="object-list-empty">
+            <div class="object-list-empty-content">
+              <div>No Service Workers</div>
+              <span>Please add a service worker to your service before using this feature.</span>
+            </div>
+          </div>
+        {{/if}}
+
       </div>
     </div>
 
   {{outlet config}}
 
-{{/if}}
+  {{/if}}
   </script>
 
   <script type="text/x-handlebars" data-template-name="Userservice">
@@ -2155,7 +2128,7 @@
       <table class="table">
       <thead>
         <th style="padding-left: 14px;">Services</th>
-        <th style="width: 262px;">Number of Workers</th>
+        <th class="center-align" style="width: 262px;">Number of Workers</th>
       </thead>
       <tbody>
         {{#each elements.Userservice}}
