css cleanup, alignment.

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -286,7 +286,7 @@
           <tbody>
 
             <tr>
-              <td style="max-width: 200px;" class="instance-col">
+              <td style="max-width: 200px;" class="instance-col center-align">
                 <div class="instance-wrapper">
                   <div>
                     <form {{action "runnableChangeInstances" model model.handler on="submit"}}>
@@ -298,7 +298,7 @@
                   </div>
                 </div>
               </td>
-              <td class="instance-provisioned service-col">
+              <td class="instance-provisioned service-col center-align">
                   <div class="instance-num auto-margin"><span>{{model.handler.provisioned}}</span></div>
               </td>
             </tr>
