Moves inline styles to css class

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -588,7 +588,7 @@
       </div>
 
   {{ else }}
-    <div class="object-list-empty dataexplore-nodataset" style="height:500px;padding-top:20px;">
+    <div class="object-list-empty dataexplore-nodataset">
       {{#if C.showLoadingIcon}}
       <div class="loading-icon">
           <div class="overlay-background">
