Make instances provisioned box same dimensions as instances requested textarea. Table alignment.

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -220,7 +220,7 @@
                     <span data-toggle="tooltip" data-placement="right" title="Please contact your system administrator for logs.">NA</span>
                   {{/if}}
                 </td>
-                <td style="max-width: 200px;" class="instance-col">
+                <td style="max-width: 200px;" class="instance-col center-align">
                   <div class="instance-wrapper">
                     <div>
                     <form {{action "changeInstances" service on="submit"}}>
@@ -232,7 +232,7 @@
                     </div>
                   </div>
                 </td>
-                <td style="max-width: 350px;" class="instance-provisioned service-col">
+                <td style="max-width: 350px;" class="instance-provisioned service-col center-align">
                     <div class="instance-num auto-margin"><span>{{service.provisioned}}</span></div>
                 </td>
               </tr>
