fix spacing issue brought about by previous commit (f7270bdf9f6271154b53f315e94e0ddc01263c97)

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -221,13 +221,13 @@
                   {{/if}}
                 </td>
                 <td style="max-width: 200px;" class="instance-col center-align">
-                  <div class="instance-wrapper">
-                    <div>
+                  <div>
+                    <div class="inline-block">
                     <form {{action "changeInstances" service on="submit"}}>
                       {{input keyUp=keyPressed placeholder=service.requested maxlength="3" value=service.instancesInput class="services-instances-input" }}
                     </form>
                     </div>
-                    <div>
+                    <div class="inline-block">
                       <button class="btn btn-blank btn-set" disabled="true" {{action changeInstances service on="click"}}>SET</button>
                     </div>
                   </div>
