Adds beta-feature message to spark job status view

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -1287,9 +1287,14 @@
         </div>
         <div class="flow-state"><strong>{{model.currentState}}</strong></div>
       </div>
-
     </div>
-
+    <div id="panels">
+      <div class="panel">
+        <div class="panel-head">
+          <div class="panel-title center-align">Beta Feature: Additional components will be added in a future release. </div>
+        </div>
+      </div>
+    </div>
     {{outlet}}
 
   </script>
