Reduced font-size for the beta-feature message

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -1291,7 +1291,7 @@
     <div id="panels">
       <div class="panel">
         <div class="panel-head">
-          <div class="panel-title center-align">Beta Feature: Additional components will be added in a future release. </div>
+          <div class="panel-title center-align beta-info-font">Beta Feature: Additional components will be added in a future release. </div>
         </div>
       </div>
     </div>
