continuuity.accesstoken -> cdap.accesstoken (in explore bash script and UI).

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -751,7 +751,7 @@
               <tr>
                 <td class="bolder-font">Step 2</td>
                 <td>
-                  Save the downloaded file as ".continuuity.accesstoken" under your home directory (~/).
+                  Save the downloaded file as ".cdap.accesstoken" under your home directory (~/).
                 </td>
               </tr>
               <tr>
