Fixes typo in index.html

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -395,7 +395,7 @@
         <th class="time-started">Time Started</th>
         <th class="query-status">Status</th>
         <th class="result-icons">Results</th>
-        <th classs="sql-statements">Query</th>
+        <th class="sql-statements">Query</th>
         <th style="width: 43%">{{!-- Panel can potentially be here--}}</th>
       </thead>
     </table>
