Reactor -> CDAP (in webapp, UI).

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -161,7 +161,7 @@
               <li>using a Procedure to query a DataSet to obtain the results.</li>
             </ol>
 
-            <p>These are the basics of Continuuity Reactor.</p>
+            <p>These are the basics of Cask's Data Application Platform.</p>
             <p>For a programming quickstart, follow the <a target="_blank" href="http://www.continuuity.com/developers/quickstart">instructions online</a> about modifying the code and redeploying the app.</p>
 
           </div>
@@ -738,7 +738,7 @@
             <h1>Usage</h1>
             <br />
             <div class="alert alert-info">
-              This is a long lasting Access Token that you can use to authenticate against Reactor. Access Tokens are used to identify and authenticate users.
+              This is a long lasting Access Token that you can use to authenticate against CDAP. Access Tokens are used to identify and authenticate users.
             </div>
             <br />
             <table class="table" role="table">
@@ -757,7 +757,7 @@
               <tr>
                 <td class="bolder-font">Step 3</td>
                 <td>
-                  Run reactor and use the provided tools with a secured Reactor.
+                  Run CDAP and use the provided tools with a secured CDAP.
                 </td>
               </tr>
             </table>
@@ -794,7 +794,7 @@
       {{view C.Embed.TimeSelector}}
       {{#if C.isEnterprise}}
       <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
-        <li>{{#linkTo Overview }}Reactor{{/linkTo}}</li>
+        <li>{{#linkTo Overview }}CDAP{{/linkTo}}</li>
         <li>{{#linkTo Resources }}Resources{{/linkTo}}</li>
       </ul>
       {{/if}}
@@ -847,7 +847,7 @@
     <div id="title">
       {{view C.Embed.TimeSelector}}
       <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
-        <li>{{#linkTo Overview }}Reactor{{/linkTo}}</li>
+        <li>{{#linkTo Overview }}CDAP{{/linkTo}}</li>
         <li>{{#linkTo Resources }}Resources{{/linkTo}}</li>
       </ul>
       <h1>Resources</h1>
