--- a/web-app/client/index_old.html
+++ b/web-app/client/index_old.html
@@ -114,7 +114,7 @@
             <li>using a Procedure to query a DataSet to obtain the results.</li>
           </ol>
 
-          <p>These are the basics of Continuuity Reactor.</p>
+          <p>These are the basics of Cask's Data Application Platform.</p>
           <p>For a programming quickstart, follow the <a target="_blank" href="http://www.continuuity.com/developers/quickstart">instructions online</a> about modifying the code and redeploying the app.</p>
 
         </div>
@@ -134,7 +134,7 @@
   </div>
   <div id="panels">
     <div class="panel">
-      <div class="panel-head"><div class="panel-title"></div>Log into Reactor</div>
+      <div class="panel-head"><div class="panel-title"></div>Log into CDAP</div>
       <div class="panel-body">
         <div class="warning">{{warning}}</div>
         {{view C.Embed.Login}}
@@ -169,7 +169,7 @@
     {{view C.Embed.TimeSelector}}
     {{#if C.isEnterprise}}
       <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
-        <li>{{#linkTo Overview }}Reactor{{/linkTo}}</li>
+        <li>{{#linkTo Overview }}CDAP{{/linkTo}}</li>
         <li>{{#linkTo Resources }}Resources{{/linkTo}}</li>
       </ul>
     {{/if}}
@@ -222,7 +222,7 @@
   <div id="title">
     {{view C.Embed.TimeSelector}}
     <ul class="nav nav-pills pull-right" style="margin: 2px 14px;">
-      <li>{{#linkTo Overview }}Reactor{{/linkTo}}</li>
+      <li>{{#linkTo Overview }}CDAP{{/linkTo}}</li>
       <li>{{#linkTo Resources }}Resources{{/linkTo}}</li>
     </ul>
     <h1>Resources</h1>
