--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -1290,10 +1290,13 @@
     </div>
     <div id="panels">
       <div class="panel">
-        <div class="panel-head">
-          <div class="panel-title center-align beta-info-font">Beta Feature: Additional components will be added in a future release.
+        <div>
+          <div class="panel-title center-align beta-info-font">
+            <div>Beta Feature: Additional components will be added in a future release. </div>
           {{#if showLogsMessage}}
-            <span> This program is running. To see more details, please see the <span class="logs-link" {{action "logsLinkHandler" on="click"}}> logs </span> </span>
+            <div>
+              <span> This program is running. To see more details, please see the <span class="logs-link" {{action "logsLinkHandler" on="click"}}> logs </span> </span>
+            </div>
           {{/if}}
           </div>
         </div>
