Fixes logo link to point to cdap home page rather than cask.co

--- a/web-app/client/index.html
+++ b/web-app/client/index.html
@@ -92,7 +92,7 @@
     <div id="nav">
       <ul>
         <li class="logo-holder">
-          <a href="http://cask.co/" target="_blank">
+          <a href="#">
             <div class="left-nav-icon" id="logo"></div>
           </a>
         </li>
