removed occurances of reactor in xml,css,html and json files

--- a/cdap-web-app/client/index.html
+++ b/cdap-web-app/client/index.html
@@ -180,7 +180,7 @@
       <h1><span>Services</span></h1>
     </div>
 
-    <div id="reactor-services">
+    <div id="cdap-services">
       <div id="panels">
 
 
