--- a/cdap-web-app/client/index.html
+++ b/cdap-web-app/client/index.html
@@ -1294,9 +1294,21 @@
         </div>
         <div class="flow-state"><strong>{{model.currentState}}</strong></div>
       </div>
-
     </div>
-
+    <div id="panels">
+      <div class="panel">
+        <div>
+          <div class="panel-title center-align beta-info-font">
+            {{#if showLogsMessage}}
+              <div>
+                <span> To see more details about the job, please see the <span class="logs-link" {{action "logsLinkHandler" on="click"}}> logs </span> </span>
+              </div>
+            {{/if}}
+            <div>Beta Feature: Additional components will be added in a future release. </div>
+          </div>
+        </div>
+      </div>
+    </div>
     {{outlet}}
 
   </script>
