Succesful -> Request Rate, Failed -> Error Rate. Reason: The first graph actually shows total request rate, not succesful rate. Also, maintain consistency with /apps/someApp page (procedure metrics are also shown there). Resolves: https://jira.continuuity.com/browse/REACTOR-1048

--- a/cdap-web-app/client/index.html
+++ b/cdap-web-app/client/index.html
@@ -1679,8 +1679,8 @@
         <div class="flow-state"><strong>{{model.currentState}}</strong></div>
       </div>
 
-      <div class="info-box sparkline-box">{{view C.Embed.Chart title="Successful" metrics="/system/apps/{parent}/procedures/{id}/query.requests"}}</div>
-      <div class="info-box sparkline-box">{{view C.Embed.Chart title="Failed" metrics="/system/apps/{parent}/procedures/{id}/query.failures"}}</div>
+      <div class="info-box sparkline-box">{{view C.Embed.Chart title="Request Rate" metrics="/system/apps/{parent}/procedures/{id}/query.requests"}}</div>
+      <div class="info-box sparkline-box">{{view C.Embed.Chart title="Error Rate" metrics="/system/apps/{parent}/procedures/{id}/query.failures"}}</div>
     </div>
     <div id="panels">
 
