remove blue from button

--- a/cdap-web-app/client/index.html
+++ b/cdap-web-app/client/index.html
@@ -752,7 +752,7 @@
               <tr>
                 <td class="bolder-font">Step 1</td>
                 <td>
-                  Click blue Download button above.
+                  Click Download button above.
                 </td>
               </tr>
               <tr>
