--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0;url=http://docs.cdap.io/cdap/2.5.0/en">
+        <script type="text/javascript">
+            window.location.href = "http://docs.cdap.io/cdap/2.5.0/en"
+        </script>
+        <title>CDAP Doc</title>
+    </head>
+    <body>
+    </body>
 </html>
