Additional redirects. Added a "current" directory, with all redirects pointing to either to current or down into the index page of the latest version.

--- a/cdap/current/index.html
+++ b/cdap/current/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0;url=cdap/current/index.html">
+        <meta http-equiv="refresh" content="0;url=../2.5.0/en/index.html">
         <script type="text/javascript">
-            window.location.href = "cdap/current/index.html"
+            window.location.href = "../2.5.0/en/index.html"
         </script>
         <title></title>
     </head>
