--- a/cdap/index.html
+++ b/cdap/index.html
@@ -1,2 +1,13 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0;url=current/index.html">
+        <script type="text/javascript">
+            window.location.href = "current/index.html"
+        </script>
+        <title></title>
+    </head>
+    <body>
+    </body>
 </html>
