--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0;url=cdap/current/index.html">
+        <meta http-equiv="refresh" content="0;url=http://docs.cdap.io/cdap/current/index.html">
         <script type="text/javascript">
-            window.location.href = "cdap/current/index.html"
+            window.location.href = "http://docs.cdap.io/cdap/current/index.html"
         </script>
         <title></title>
     </head>
