--- a/cdap-docs/_common/_templates/guides.html
+++ b/cdap-docs/_common/_templates/guides.html
@@ -18,8 +18,6 @@
        <li><a href="{{ master_url_root }}{{ _('/../../admin/index.html') }}"
             rel="nofollow">{{ _('Administration') }}</a></li>
       <li><a href="{{ master_url_root }}{{ _('/../../tutorials/index.html') }}"
-            rel="nofollow">{{ _('Tutorials') }}</a></li>
-      <li><a href="{{ master_url_root }}{{ _('/../../guides/index.html') }}"
-            rel="nofollow">{{ _('How-To Guides') }}</a></li>
+            rel="nofollow">{{ _('How-To Guides and Tutorials') }}</a></li>
     </ul>
    </div>
