Moved examples. Other edits, too numerous to mention.

--- a/cdap-docs/_common/_themes/cdap/globaltoc.html
+++ b/cdap-docs/_common/_themes/cdap/globaltoc.html
@@ -14,7 +14,7 @@
   the License.
 -->
 
-<h3><a href="{{ pathto(master_doc) }}">{{ html_short_title_toc }}: {{ _('Table of Contents') }}</a></h3>
+<h3><a href="{{ pathto(master_doc) }}">{{ html_short_title_toc }}: Table&nbsp;of&nbsp;Contents</a></h3>
 <nav>
 {{ toctree() }}
 </nav>
