--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="coopr-ngui" ng-strict-di>
+<html lang="en" ng-app="cdap-ngui" ng-strict-di>
 <head>
-    <title ng-bind="$state.current | myTitleFilter">Cask</title>
+    <title ng-bind="$state.current | myTitleFilter">CDAP</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
