--- a/cdap-docs/_common/_themes/cdap/manuals.html
+++ b/cdap-docs/_common/_themes/cdap/manuals.html
@@ -5,10 +5,14 @@
 #}
 {%- set master_url_root = pathto(master_doc, 1) %}
 {%- if master_url_root == '#' %}{% set master_url_root = '' %}{% endif %}
-{%- if html_short_title_toc == 'Developers’ Manual'              %}{% set doc1 = '<b>' %}{% set doc1b = '</b>' %}{% endif %}
-{%- if html_short_title_toc == 'Reference Manual'                %}{% set doc2 = '<b>' %}{% set doc2b = '</b>' %}{% endif %}
-{%- if html_short_title_toc == 'Administration Manual'           %}{% set doc3 = '<b>' %}{% set doc3b = '</b>' %}{% endif %}
-{%- if html_short_title_toc == 'Examples, Guides, and Tutorials' %}{% set doc4 = '<b>' %}{% set doc4b = '</b>' %}{% endif %}
+{%- if   pagename == 'release-notes' %}{% set doc5 = '<b>' %}{% set doc5b = '</b>' %}
+{%- elif pagename == 'glossary'      %}{% set doc6 = '<b>' %}{% set doc6b = '</b>' %}
+{%- elif pagename == 'faq'           %}{% set doc7 = '<b>' %}{% set doc7b = '</b>' %}
+{%- elif html_short_title_toc == 'Developers’ Manual'              %}{% set doc1 = '<b>' %}{% set doc1b = '</b>' %}
+{%- elif html_short_title_toc == 'Reference Manual'                %}{% set doc2 = '<b>' %}{% set doc2b = '</b>' %}
+{%- elif html_short_title_toc == 'Administration Manual'           %}{% set doc3 = '<b>' %}{% set doc3b = '</b>' %}
+{%- elif html_short_title_toc == 'Examples, Guides, and Tutorials' %}{% set doc4 = '<b>' %}{% set doc4b = '</b>' %}
+{%- endif %}
   <div role="note" aria-label="guides links">
     <h3>{{ _('CDAP Documentation') }}</h3>
     <ul class="this-page-menu">
@@ -20,5 +24,11 @@
             rel="nofollow">{{ _('Administration Manual') }}</a>{{ doc3b }}</li>
       <li>{{ doc4 }}<a href="{{ master_url_root }}{{ _('/../../examples-manual/index.html') }}"
             rel="nofollow">{{ _('Examples, Guides, and Tutorials') }}</a>{{ doc4b }}</li>
+      <li>{{ doc5 }}<a href="{{ master_url_root }}{{ _('/../../reference-manual/release-notes.html') }}"
+            rel="nofollow">{{ _('Release Notes') }}</a>{{ doc5b }}</li>
+      <li>{{ doc6 }}<a href="{{ master_url_root }}{{ _('/../../reference-manual/glossary.html') }}"
+            rel="nofollow">{{ _('Glossary') }}</a>{{ doc6b }}</li>
+      <li>{{ doc7 }}<a href="{{ master_url_root }}{{ _('/../../reference-manual/faq.html') }}"
+            rel="nofollow">{{ _('FAQ') }}</a>{{ doc7b }}</li>
     </ul>
    </div>
