--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="cdap-ngui" ng-strict-di>
+<html lang="en" ng-app="cdap-ui" ng-strict-di>
 <head>
     <title ng-bind="$state.current | myTitleFilter">CDAP</title>
 
