Add a downloads link to the doc pages.

--- a/cdap-docs/_common/_themes/cdap/manuals.html
+++ b/cdap-docs/_common/_themes/cdap/manuals.html
@@ -13,7 +13,7 @@
 {%- elif html_short_title_toc == 'Administration Manual'           %}{% set doc3 = '<b>' %}{% set doc3b = '</b>' %}
 {%- elif html_short_title_toc == 'Examples, Guides, and Tutorials' %}{% set doc4 = '<b>' %}{% set doc4b = '</b>' %}
 {%- endif %}
-  <div role="note" aria-label="guides links">
+  <div role="note" aria-label="manuals links">
     <h3>{{ _('CDAP Documentation') }}</h3>
     <ul class="this-page-menu">
       <li>{{ doc1 }}<a href="{{ master_url_root }}{{ _('/../../developers-manual/index.html') }}"
