--- a/cdap-docs/_common/_themes/cdap/downloads.html
+++ b/cdap-docs/_common/_themes/cdap/downloads.html
@@ -2,13 +2,13 @@
     downloads.html
     ~~~~~~~~~~~~~~~~~~~~~
     Sphinx sidebar template: "CDAP Documentation Downloads" links.
-    cdap-docs-2.5.1-web.zip
+    
 #}
 {%- set zip_archive = "cdap-docs-" ~ version ~ "-web.zip" %}
   <div role="note" aria-label="downloads links">
     <h3>Downloads</h3>
     <ul class="this-page-menu">
-      <li><a href="http://docs.cask.co/cdap/current/{{ zip_archive }}"
+      <li><a href="http://docs.cask.co/cdap/{{ version }}/{{ zip_archive }}"
             rel="nofollow">Zip Archive of CDAP Documentation</a></li>
     </ul>
    </div>
