warning sent down to client

--- a/app/features/foo/foo.html
+++ b/app/features/foo/foo.html
@@ -1,4 +1,7 @@
 <h1>
-  This is the Foo view
+  This is the {{$state.current.name}} view
 </h1>
 
+<p>
+  <pre>{{$state.current | json}}</pre>
+</p>
