--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,17 +1,9 @@
 <h1>
-  CDAP prototype
+  CDAP websocket prototype
 </h1>
 
-<div class="form-inline">
-  <input class="form-control" type="text" ng-model="url" />
-  <button class="btn btn-default" ng-click="fetchSomething(url)">
-    fetch url via socket</button>
-</div>
 
 <p>
   <pre>{{something | json}}</pre>
 </p>
 
-<p>
-  <pre>{{pollthing | json}}</pre>
-</p>
