--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -3,7 +3,11 @@
 </h1>
 
 
+<epoch-live-line
+  chart-height="200"
+  chart-data="lineData"
+></epoch-live-line>
+
 <p>
   <pre>{{something | json}}</pre>
 </p>
-
