--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,13 +1,27 @@
-<h1>
+<h1 class="clearfix">
   CDAP websocket prototype
 </h1>
 
 
-<epoch-live-line
-  chart-height="200"
-  chart-data="lineData"
-></epoch-live-line>
 
-<p>
-  <pre>{{something | json}}</pre>
-</p>
+<div class="row">
+  <div class="col-sm-8">
+
+    <epoch-live-line
+      data-history="lineHistory"
+      data-stream="lineStream"
+      chart-height="300"
+    ></epoch-live-line>
+
+  </div>
+  <div class="col-sm-4">
+
+    <epoch-gauge
+      class="gauge-small"
+      data-stream="gaugeValue"
+      chart-height="135"
+    ></epoch-gauge>
+
+  </div>
+</div>
+
