--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -7,20 +7,21 @@
 <div class="row">
   <div class="col-sm-8">
 
-    <epoch-live-line
+    <div epoch-live-line
       data-history="lineHistory"
       data-stream="lineStream"
-      chart-height="300"
-    ></epoch-live-line>
+
+      chart-height="200"
+    ></div>
 
   </div>
   <div class="col-sm-4">
 
-    <epoch-gauge
+    <div epoch-gauge
       class="gauge-small"
       data-stream="gaugeValue"
       chart-height="135"
-    ></epoch-gauge>
+    ></div>
 
   </div>
 </div>
